# MasterDeg

./: .gitignore
Algorytmy OnLine/Lista/: CMakeLists.txt  Distribution.cpp  Distribution.hpp  Distribution_test.cpp  List.cpp  List.hpp  Results.txt  TestFramework.hpp  Tester.cpp  Types.cpp  Types.hpp
Algorytmy_OnLine/Lista/: Distribution.hpp  Results.xlsx  Tester.cpp
Analiza Algorytmow/Count/: HashFunction.hpp  MinCount.cpp  MinCount.hpp  Set.cpp  Set.hpp  StatAnalyzer.cpp
Analiza Algorytmow/Lider/: CMakeLists.txt  LeaderElection.cpp  Stuff.xlsx  Tester.cpp
Analiza_Algorytmow/: results.xlsx
Analiza_Algorytmow/Count/: BadHashTester.cpp  CMakeLists.txt  ConcreateHashFunction.hpp  OptimalK.cpp  StatAnalyzer.cpp  Tester.cpp  grapher.py
Analiza_Algorytmow/Count/Results/: bh_Bias3Down.csv  bh_Bias3Up.csv  bh_Shorter16b.csv  bh_Shorter24.csv
Analiza_Algorytmow/Lider/: LeaderElection.hpp
Big_Data/Words/: generateCloud.py  generateITFCloud.py
Big_Data/Words/TF_IDF/: KingLear_tfidf.csv  Othello_tfidf.csv  RomeoJuliet_tfidf.csv  hamlet_tfidf.csv
Kryptografia/Zadania/5/: uml.pu  zadanie.tex
Metody_Optymalizacji/Lista1/: crane.mod  hilbert.mod  refinery.mod  res.txt
Metody_Optymalizacji/Lista1/Sprawozdanie/: Sprawozdanie.aux  Sprawozdanie.fdb_latexmk  Sprawozdanie.fls  Sprawozdanie.tex
